<resources>
    <string name="app_name">NoteApp</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Menu items -->
    <string name="item" translatable="false">Item</string>
    <string name="config" translatable="false">Config</string>

    <!-- Root preferences -->
    <string name="note">Note</string>
    <string name="note_color">Note color</string>
    <string name="note_title_text_size">Title text size</string>
    <string name="note_body_text_size">Body text size</string>
    <string name="note_text_color">Text color</string>
    <string name="pick_color">Pick a color</string>

    <!-- New note -->
    <string name="note_title">Note title</string>
    <string name="note_desc">Note description</string>
    <string name="insert">Insert</string>
</resources>